--- a/DemoMenu/BaseVCSupportingViews/MenuSlider.xib
+++ b/DemoMenu/BaseVCSupportingViews/MenuSlider.xib
@@ -16,9 +16,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cDf-oP-l88">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RyO-Wo-CiR">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.60640404929577463" colorSpace="calibratedWhite"/>
                     <connections>
                         <action selector="didTapMenuBackground:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="Afz-em-kaX"/>
                     </connections>
@@ -40,19 +43,25 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="1MK-hr-Rk6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="3cC-7l-d9x"/>
                 <constraint firstItem="1MK-hr-Rk6" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="6Dv-Vt-bhm"/>
                 <constraint firstAttribute="trailing" secondItem="RyO-Wo-CiR" secondAttribute="trailing" id="8sl-gT-n9K"/>
+                <constraint firstItem="cDf-oP-l88" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Efi-wP-wrs"/>
+                <constraint firstAttribute="bottom" secondItem="cDf-oP-l88" secondAttribute="bottom" id="Jgn-kK-qwV"/>
                 <constraint firstAttribute="bottom" secondItem="RyO-Wo-CiR" secondAttribute="bottom" id="Xu5-eH-5Rc"/>
                 <constraint firstAttribute="bottom" secondItem="1MK-hr-Rk6" secondAttribute="bottom" id="Ylb-9L-EAM"/>
                 <constraint firstItem="RyO-Wo-CiR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="aUS-4P-zDM"/>
                 <constraint firstItem="1MK-hr-Rk6" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="260:375" id="g1c-Fx-RE0"/>
                 <constraint firstItem="RyO-Wo-CiR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ru6-l0-B6x"/>
+                <constraint firstItem="cDf-oP-l88" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="tFD-AE-1Yk"/>
+                <constraint firstAttribute="trailing" secondItem="cDf-oP-l88" secondAttribute="trailing" id="wwu-u3-QZs"/>
             </constraints>
             <connections>
+                <outlet property="btnBG" destination="RyO-Wo-CiR" id="L2Y-Ve-wNc"/>
                 <outlet property="cnstMenuListingLeading" destination="3cC-7l-d9x" id="kWq-kj-GuV"/>
+                <outlet property="imgBG" destination="cDf-oP-l88" id="I4F-GE-mHO"/>
                 <outlet property="tblMenuList" destination="TXj-kg-C5Y" id="h2l-ha-yIe"/>
                 <outlet property="viewMenuListing" destination="1MK-hr-Rk6" id="O6y-bk-vFK"/>
             </connections>
